# faith

./: .gitignore  Cargo.toml  README.md
aaaa/: main.fth
crates/base/: Cargo.toml
crates/base/src/: lib.rs  unify.rs
crates/base/src/arena/: intern.rs  mod.rs
crates/base/src/bitset/: mod.rs
crates/base/src/graph/: dominators.rs  iter.rs  mod.rs
crates/base/src/hash/: mod.rs  scoped.rs
crates/base/src/index/: mod.rs  slice.rs  vec.rs
crates/base/src/pp/: mod.rs
crates/driver/: Cargo.toml
crates/driver/src/: lib.rs
crates/hir/: Cargo.toml
crates/hir/src/: hir.rs  lib.rs  lower.rs  path.rs  pretty.rs  typ.rs
crates/infer/: Cargo.toml
crates/infer/src/: constraint.rs  environment.rs  error.rs  hir.rs  lib.rs  match_compile.rs  resolve.rs  substitution.rs  ty.rs  typ.rs  unify.rs
crates/infer/tests/: support.rs  tests.rs
crates/log/: Cargo.toml
crates/log/src/: lib.rs
crates/mir/: Cargo.toml
crates/mir/src/: closure_convert.rs  lib.rs  lower.rs  match_compile.rs  mir.rs  mono.rs  pretty.rs  shrink.rs
crates/span/: Cargo.toml
crates/span/src/: diag.rs  intern.rs  lib.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: ast.rs  grammar.rs  lexer.rs  lib.rs  parser.rs  pretty.rs  token.rs
lib/: either.fe  list.fth  option.fe  prelude.fth  std.fe  std.fth  vec.fe
src/: main.rs
tests/: infer.rs
tests/programs/: ack.fth
